fix: hero carousel on mobile

--- a/src/components/home/hero/hero.module.scss
+++ b/src/components/home/hero/hero.module.scss
@@ -170,11 +170,13 @@
 
 			.embla__viewport {
 				overflow: hidden;
+				height: 100%;
 			}
 			.embla__container {
 				display: flex;
 				touch-action: pan-y pinch-zoom;
 				margin-left: calc(var(--slide-spacing) * -1);
+				height: 100%;
 			}
 			.embla__slide {
 				transform: translate3d(0, 0, 0);
